# 2dcurves

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/2dcurves/: Shader.h  Vertex.h  global_vars.h  utils.h
include/glad/glad/: gl.h
shaders/: fragment_shader.txt  vertex_shader.txt
src/: Shader.cpp  main.cpp  utils.cpp
